plugins {
    id 'java'
    id 'edu.sc.seis.launch4j' version '2.4.4'
}

group 'level4project'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.10

repositories {
    mavenCentral()
}

def currentOS = org.gradle.internal.os.OperatingSystem.current()
def platform
if (currentOS.isWindows()) {
    platform = 'win'
} else if (currentOS.isLinux()) {
    platform = 'linux'
} else if (currentOS.isMacOsX()) {
    platform = 'mac'
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile "org.testfx:testfx-core:4.0.14-alpha"
    testCompile "org.testfx:testfx-junit:4.0.15-alpha"
    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
    compile 'org.json:json:20171018'
    compile group: 'net.sourceforge.jeval', name: 'jeval', version: '0.9.4'
    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
    //compile group: 'org.openjfx', name: 'javafx', version: '12-ea+4', ext: 'pom'
    compile "org.openjfx:javafx-base:11:${platform}"
    compile "org.openjfx:javafx-graphics:11:${platform}"
    compile "org.openjfx:javafx-controls:11:${platform}"
    compile "org.openjfx:javafx-fxml:11:${platform}"
}

compileJava {
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls,javafx.fxml'
        ]
    }
}


jar {
    manifest {
        attributes(
                'Main-Class': 'ui.main.Main'
        )
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

launch4j {
    mainClassName = 'ui.main.Main'
    bundledJre64Bit = true
    //bundledJrePath = "usr/lib/jvm/java-10-oracle/bin/java"
    bundledJrePath = "jre"
}